File tool jar export
Command: mvn clean compile assembly:single

TODO: Create action for jar release